<resources>
    <string name="app_name">Plutus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="remark">Remark</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

</resources>